--- a/src/components/general/pairing/MountedAttackPairs.astro
+++ b/src/components/general/pairing/MountedAttackPairs.astro
@@ -5,7 +5,7 @@ import type { ComponentProps } from "astro/types";
 
 import { type ZodError } from "zod";
 import { ulid } from "ulidx";
-import GridDisplay from "../gridDisplay/gridDisplay.astro";
+import GridDisplay from "./gridDisplay.astro";
 type GridDisplayProps = ComponentProps<typeof GridDisplay>;
 
 import {
