--- a/src/components/general/pairing/gridDisplay.astro
+++ b/src/components/general/pairing/gridDisplay.astro
@@ -1,7 +1,7 @@
 ---
 export const prerender = false;
 
-import { z } from "zod";
+import { z } from "astro:content";
 
 import "@spectrum-css/vars/dist/spectrum-global.css";
 import "@spectrum-css/vars/dist/spectrum-medium.css";
