--- a/src/components/general/mayors/Mayors.astro
+++ b/src/components/general/mayors/Mayors.astro
@@ -95,7 +95,7 @@ if (result2.success) {
       if(conflicts !== null && conflicts !== undefined) {
         for (const key in conflicts) {
           if(key.localeCompare('other')) {
-            const items = conflicts[key as keyof typeof conflicts];
+            const items = conflicts[key];
             if(items !== undefined && Array.isArray(items) && items.length > 0) {
               let tg = allGenerals?.filter((g) => {
                 return items.includes(g.general.name);
@@ -114,7 +114,7 @@ if (result2.success) {
           if(books !== null && books !== undefined) {
             for (const key in conflicts) {
               if (key.localeCompare('other')) {
-                const items = conflicts[key as keyof typeof conflicts];
+                const items = conflicts[key];
                 if(items !== undefined && Array.isArray(items) && items.length > 0) {
                   items.forEach((g: string) => {
                     Returnable.set(g, books);
