--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,4 +1,5 @@
 ---
+export const prerender = true;
 import StarlightPage from '@astrojs/starlight/components/StarlightPage.astro';
 
 Astro.response.status = 404;
