remove unused imports

--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -2,10 +2,8 @@
 import StarlightSidebar from '@astrojs/starlight/components/Sidebar.astro'
 import type { Props,  } from '@astrojs/starlight/props'
 
-import { getEntries } from 'astro:content';
 import { getCollection } from 'astro:content';
-import {z} from "astro:content"
-import type { SidebarEntry, Link, Group } from '@astrojs/starlight/utils/navigation';
+import type { SidebarEntry, Group } from '@astrojs/starlight/utils/navigation';
 
 const DEBUG=false;
 
